Finished Bailey bilingual

--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -34,7 +34,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        Καὶ τοὺς προβεβηκότας δὲ ἱκανῶς ἐν τῇ τῶν ὅλων ἐπιβλέψει τὸν τύπον τῆς ὅλης πραγµατείας τὸν κατεστοιχειωµένον δεῖ μνημονεύειν.
+        καὶ τοὺς προβεβηκότας δὲ ἱκανῶς ἐν τῇ τῶν ὅλων ἐπιβλέψει τὸν τύπον τῆς ὅλης πραγµατείας τὸν κατεστοιχειωµένον δεῖ μνημονεύειν.
     </td>
     <td>
         But those also who have made considerable progress in the survey of the main principles ought to bear in mind the scheme of the whole system set forth in its essentials. 
@@ -42,7 +42,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        τῆς γὰρ ἀθρόας ἐπιβολῆς πυκνὸν δεόμεθα, τῆς δὲ κατὰ µέρος οὐχ ὁμοίως. 
+        τῆς γὰρ ἀθρόας ἐπιβολῆς πυκνὸν δεόμεθα, τῆς δὲ κατὰ µέρος οὐχ ὁμοίως.
     </td>
     <td>
         For we have frequent need of the general view, but not so often of the detailed exposition.
@@ -58,7 +58,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        καὶ δὴ καὶ τὸ κατὰ µέρος ἀκρίβωμα πᾶν ἐξευρήσεται, τῶν ὁλοσχερωτάτων τύπων εὖ περιειλημμένων καὶ μνημονευομένων· 
+        καὶ δὴ καὶ τὸ κατὰ µέρος ἀκρίβωμα πᾶν ἐξευρήσεται, τῶν ὁλοσχερωτάτων τύπων εὖ περιειλημμένων καὶ μνημονευομένων·
     </td>
     <td>
         And in fact the accurate knowledge of details will be fully discovered, if the general principles in the various departments are thoroughly grasped and borne in mind,
@@ -82,7 +82,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        [37] Ὅθεν δὴ πᾶσι χρησίμης οὔσης τοῖς ῴκειωμένοις φυσιολογίᾳ τῆς τοιαύτης ὁδοῦ, παρεγγυῶν τὸ συνεχὲς ἐνέργημα ἐν φυσιολογίᾳ καὶ τοιούτῳ μάλιστα ἐγγαληνίζων τῷ βίῳ ἐποίησά σοι καὶ τοιαύτην τινὰ ἐπιτομὴν καὶ στοιχείωσιν τῶν ὅλων δοξῶν.
+        [37] ὅθεν δὴ πᾶσι χρησίμης οὔσης τοῖς ῴκειωμένοις φυσιολογίᾳ τῆς τοιαύτης ὁδοῦ, παρεγγυῶν τὸ συνεχὲς ἐνέργημα ἐν φυσιολογίᾳ καὶ τοιούτῳ μάλιστα ἐγγαληνίζων τῷ βίῳ ἐποίησά σοι καὶ τοιαύτην τινὰ ἐπιτομὴν καὶ στοιχείωσιν τῶν ὅλων δοξῶν.
     </td>
     <td>
         [37] Wherefore since the method I have described is valuable to all those who are accustomed to the investigation of nature, I who urge upon others the constant occupation in the investigation of nature, and find my own peace chiefly in a life so occupied, have composed for you another epitome on these lines, summing up the first principles of the whole doctrine.
@@ -146,7 +146,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        Καὶ μὴν καὶ τὸ πᾶν ἀεὶ τοιοῦτον ἦν οἷον νῦν ἐστι, καὶ ἀεὶ τοιοῦτον ἔσται. 
+        καὶ μὴν καὶ τὸ πᾶν ἀεὶ τοιοῦτον ἦν οἷον νῦν ἐστι, καὶ ἀεὶ τοιοῦτον ἔσται.
     </td>
     <td>
         Furthermore, the universe always was such as it is now, and always will be the same.
@@ -1366,6 +1366,110 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
     </td>
     <td> 
         And for this very reason, even if we discover several causes for turnings and settings and risings and eclipses and the like, as has been the case already in our investigation of detail,
+    </td>
+</tr>
+<tr>
+    <td>
+        [80] οὐ δεῖ νομίζειν τὴν ὑπὲρ τούτων χρείαν ἀκρίβειαν μὴ ἀπειληφέναι, ὅση πρὸς τὸ ἀτάραχον καὶ μακάριον ἡμῶν συντείνει.
+    </td>
+    <td>
+        [80] we must not suppose that our inquiry into these things has not reached sufficient accuracy to contribute to our peace of mind and happiness.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε παραθεωροῦντας ποσαχῶς παρ᾽ ἡμῖν τὸ ὅμοιον γίνεται, αἰτιολογητέον ὑπέρ τε τῶν μετεώρων καὶ παντὸς τοῦ ἀδήλου, καταφρονοῦντας τῶν οὔτε &lt;τὸ&gt; μοναχῶς ἔχον ἢ γινόμενον γνωριζόντων οὔτε τὸ πλεοναχῶς συμβαῖνον &lt;ἐπί τῶν&gt; τήν ἐκ τῶν ἀποστημάτων φαντασίαν παραδιδόντων, ἔτι τε ἀγνοούντων καὶ ἐν ποίοις οὐκ ἔστιν ἀταρακτῆσαι. 
+    </td>
+    <td>
+        So we must carefully consider in how many ways a similar phenomenon is produced on earth, when we reason about the causes of celestial phenomena and all that is imperceptible to the senses; and we must despise those persons who do not recognize either earth, and not what exists or comes into being in one way only, or that which may occur in several ways in the case of things which can only be seen by us from a distance, and further are not aware under what conditions it is impossible to have peace of mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἂν οὖν οἰώμεθα καὶ ὡδί πως ἐνδεχόμενον αὐτὸ γίνεσθαι καὶ ἐφ᾽ οἵοις ὁμοίως ἀταρακτῆσαι, αὐτὸ τὸ ὅτι πλεοναχῶς γίνεται γνωρίζοντες ὥσπερ κἂν ὅτι ὡδί πως γίνεται εἰδῶμεν ἀταρακτήσομεν. 
+    </td>
+    <td>
+        If, therefore, we think that a phenomenon probably occurs in some such particular way, and that in circumstances under which it is equally possible for us to be at peace, when we realize that it may occur in several ways, we shall be just as little disturbed as if we know that it occurs in some such particular way.
+    </td>
+</tr>
+<tr>
+    <td>
+        [81] ἐπὶ δὲ τούτοις ὅλως ἅπασιν ἐκεῖνο δεῖ κατανοεῖν, ὅτι τάραχος ὁ κυριώτατος ταῖς ἀνθρωπίναις ψυχαῖς γίνεται ἐν τῷ ταῦτα μακάριά τε δοξάζειν καὶ ἄφθαρτα, καὶ ὑπεναντίας ἔχειν τούτοις βουλήσεις ἅμα καὶ πράξεις καὶ αἰτίας, καὶ ἐν τῷ αἰώνιόν τι δεινὸν ἀεὶ προσδοκᾶν ἢ ὑποπτεύειν κατὰ τοὺς μύθους εἴτε καὶ αὐτὴν τὴν ἀναισθησίαν τὴν ἐν τῷ τεθνάναι φοβουμένους ὥσπερ οὖσαν κατ᾽ αὐτούς, καὶ ἐν τῷ μὴ δόξαις ταῦτα πάσχειν ἀλλ᾽ ἀλόγῳ γέ τινι παραστάσει, ὅθεν μὴ ὁρίζοντας τὸ δεινὸν τὴν ἴσην ἢ καὶ ἐπιτεταμένην ταραχὴν λαμβάνειν ὡς εἰ καί ἐδόξαζον ταῦτα·
+    </td>
+    <td>
+        [81] And besides all these matters in general we must grasp this point, that the principal disturbance in the minds of men arises because they think that these celestial bodies are blessed and immortal, and yet have wills and actions and motives inconsistent with these attributes; and because they are always expecting or imagining some everlasting misery, such as is depicted in legends, or even fear the loss of feeling in death as though it would concern them themselves; and, again, because they are brought to this pass not by reasoned opinion, but rather by some irrational presentiment, and therefore, as they do not know the limits of pain, they suffer a disturbance equally great or even more extensive than if they had reached this belief by opinion.
+    </td>
+</tr>
+<tr>
+    <td>
+        [82] ἡ δὲ ἀταραξία τὸ τούτων πάντων ἀπολελύσθαι καὶ συνεχῆ μνήμην ἔχειν τῶν ὅλων καὶ κυριωτάτων.
+    </td>
+    <td>
+        [82] But peace of mind is being delivered from all this, and having a constant memory of the general and most essential principles.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ὅθεν τοῖς πάθεσι προσεκτέον τοῖς παροῦσι καὶ ταῖς αἰσθήσεσι, κατὰ μὲν τὸ κοινὸν ταῖς κοιναῖς, κατὰ δὲ τὸ ἴδιον ταῖς ἰδίαις, καὶ πάσῃ τῇ παρούσῃ καθ᾽ ἕκαστον τῶν κριτηρίων ἐναργείᾳ.
+    </td>
+    <td>
+        Wherefore we must pay attention to internal feelings and to external sensations in general and in particular, according as the subject is general or particular, and to every immediate intuition in accordance with each of the standards of judgement.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἂν γὰρ τούτοις προσέχωμεν, τὸ ὅθεν ὁ τάραχος καὶ ὁ φόβος ἐγίνετο ἐξαιτιολογήσομεν ὀρθῶς καὶ ἀπολύσομεν, ὑπέρ τε μετεώρων αἰτιολογοῦντες καὶ τῶν λοιπῶν τῶν ἀεὶ παρεμπιπτόντων, ὅσα φοβεῖ τοὺς λοιποὺς ἐσχάτως.
+    </td>
+    <td>
+        For if we pay attention to these, we shall rightly trace the causes whence arose our mental disturbance and fear, and, by learning the true causes of celestial phenomena and all other occurrences that come to pass from time to time, we shall free ourselves from all which produces the utmost fear in other men.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ταῦτά σοι, ὦ Ἡρόδοτε, ἔστι κεφαλαιωδέστατα ὑπὲρ τῆς τῶν ὅλων φύσεως ἐπιτετμημένα,
+    </td>
+    <td>
+        Here, Herodotus, is my treatise on the chief points concerning the nature of the general principles,
+    </td>
+</tr>
+<tr>
+    <td>
+        [83] ὥστε ἂν γένοιτο οὖτος ὁ λὸγος δυνατὸς κατασχεθῆ&lt;ναι&gt; μετʹ ἀκριβείας·
+    </td>
+    <td>
+        [83] abridged so that my account would be easy to grasp with accuracy.
+    </td>
+</tr>
+<tr>
+    <td>
+        οἶμαι, ἐὰν μὴ καὶ πρὸς ἅπαντα βαδίσῃ τις τῶν κατὰ μέρος ἀκριβωμάτων, ἀσύμβλητον αὐτὸν πρὸς τοὺς λοιποὺς ἀνθρώπους ἁδρότητα λήψεσθαι.
+    </td>
+    <td>
+        I think that, even if one were unable to proceed to all the detailed particulars of the system, he would from this obtain an unrivalled strength compared with other men.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ γὰρ καὶ καθαρὰ ἀφ᾽ ἑαυτοῦ ποιήσει πολλὰ τῶν κατὰ μέρος ἐξακριβουμένων κατὰ τὴν ὅλην πραγματείαν ἡμῖν, καὶ αὐτὰ ταῦτα ἐν μνήμῃ τιθέμενα συνεχῶς βοηθήσει.
+    </td>
+    <td>
+        For indeed he will clear up for himself many of the detailed points by reference to our general system, and these very principles, if he stores them in his mind, will constantly aid him.
+    </td>
+</tr>
+<tr>
+    <td>
+        τοιαῦτα γάρ ἐστιν, ὥστε καὶ τοὺς &lt;καὶ τὰ&gt; κατὰ μέρος ἤδη ἐξακριβοῦντας ἱκανῶς ἢ καὶ τελείως, εἰς τὰς τοιαύτας ἀναλύοντας ἐπιβολὰς τὰς πλείστας τῶν περιοδειῶν ὑπὲρ τῆς ὅλης φύσεως ποιεῖσθαι·
+    </td>
+    <td>
+        For such is their character that even those who are at present engaged in working out the details to a considerable degree, or even completely, will be able to carry out the greater part of their investigations into the nature of the whole by conducting their analysis in reference to such a survey as this.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅσοι δὲ μὴ παντελῶς αὐτῶν τῶν ἀποτελουμένων, ἐκ τούτων εἰσὶν οἲ κατὰ τὸν ἄνευ φθόγγων τρόπον τὴν ἅμα νοήματι περίοδον τῶν κυριωτάτων πρὸς γαληνισμὸν ποιοῦνται.
+    </td>
+    <td>
+        And as for all who are not fully among those on the way to being perfected, some of them can from this summary obtain a hasty view of the most important matters without oral instruction so as to secure peace of mind.
     </td>
 </tr>
 </table>
