Continuing to arrange paragraphs

--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -202,7 +202,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        Καὶ μὴν καὶ τῶν σωμάτων τὰ μέν ἐστι συγκρίσεις, τὰ δ᾽ ἐξ ὧν αἱ συγκρίσεις πεποίηνται· 
+        καὶ μὴν καὶ τῶν σωμάτων τὰ μέν ἐστι συγκρίσεις, τὰ δ᾽ ἐξ ὧν αἱ συγκρίσεις πεποίηνται· 
     </td>
     <td>
         Furthermore, among bodies some are compounds, and others those of which compounds are formed.
@@ -258,7 +258,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        Καὶ μὴν καὶ τῷ πλήθει τῶν σωμάτων ἄπειρόν ἐστι τὸ πᾶν καὶ τῷ μεγέθει τοῦ κενοῦ. 
+        καὶ μὴν καὶ τῷ πλήθει τῶν σωμάτων ἄπειρόν ἐστι τὸ πᾶν καὶ τῷ μεγέθει τοῦ κενοῦ.
     </td>
     <td>
         Furthermore, the infinite is boundless both in the number of the bodies and in the extent of the void.
@@ -298,7 +298,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        Καὶ καθ᾽ ἑκάστην δὲ σχημάτισιν ἁπλῶς ἄπειροί εἰσιν αἱ ὅμοιαι, ταῖς δὲ διαφοραῖς οὐχ ἁπλῶς ἄπειροι ἀλλὰ μόνον ἀπερίληπτοι.
+        καὶ καθ᾽ ἑκάστην δὲ σχημάτισιν ἁπλῶς ἄπειροί εἰσιν αἱ ὅμοιαι, ταῖς δὲ διαφοραῖς οὐχ ἁπλῶς ἄπειροι ἀλλὰ μόνον ἀπερίληπτοι.
     </td>
     <td>
         And so in each shape the atoms are quite infinite in number, but their differences of shape are not quite infinite, but only incomprehensible in number.
@@ -354,7 +354,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        αἵ τε γὰρ ἄτομοι ἄπειροι οὖσαι, ὡς ἄρτι ἀπεδείχθη, φέρονται καὶ πορρωτάτω. 
+        αἵ τε γὰρ ἄτομοι ἄπειροι οὖσαι, ὡς ἄρτι ἀπεδείχθη, φέρονται καὶ πορρωτάτω.
     </td>
     <td>
         For the atoms being infinite in number, as was proved already, are borne on far out into space.
@@ -362,7 +362,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        οὐ γὰρ κατανἥλωνται αἱ τοιαῦται ἄτομοι, ἐξ ὧν ἂν γένοιτο κόσμος ἢ ὑφ᾽ ὧν ἂν ποιηθείη, οὔτ᾽ εἰς ἕνα οὔτ᾽ εἰς πεπερασμένους, οὔθ᾽ ὅσοι τοιοῦτοι οὔθ᾽ ὅσοι διάφοροι τούτοις. 
+        οὐ γὰρ κατανἥλωνται αἱ τοιαῦται ἄτομοι, ἐξ ὧν ἂν γένοιτο κόσμος ἢ ὑφ᾽ ὧν ἂν ποιηθείη, οὔτ᾽ εἰς ἕνα οὔτ᾽ εἰς πεπερασμένους, οὔθ᾽ ὅσοι τοιοῦτοι οὔθ᾽ ὅσοι διάφοροι τούτοις.
     </td>
     <td>
         For those atoms, which are of such nature that a world could be created out of them or made by them, have not been used up either on one world or on a limited number of worlds, nor again on all the worlds which are alike, or on those which are different from these.
@@ -370,7 +370,7 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        ὥστε οὐδὲν τὸ ἐμποδοστατῆσόν ἐστι πρὸς τὴν ἀπειρίαν τῶν κόσμων. 
+        ὥστε οὐδὲν τὸ ἐμποδοστατῆσόν ἐστι πρὸς τὴν ἀπειρίαν τῶν κόσμων.
     </td>
     <td>
         So that there nowhere exists an obstacle to the infinite number of the worlds.
