--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <h1>The Epicurean Herald Main Page</h1>
 <h2>Texts</h2>
 <ol>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener (1887)</a> </li>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey_EN.html">Epicurus's Letter to Herodotus - English text translated by C. Bailey (1926)</a> </li>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_GR_EN.html">Epicurus's Letter to Herodotus - Greek-English Bilingual version</a> </li>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by Hermann Usener (1887)</a> </li>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey.html">Epicurus's Letter to Herodotus - Greek and English text compiled and translated by Cyril Bailey (1926)</a> </li>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bilingual.html">Epicurus's Letter to Herodotus - Translator's version - Bailey's text line-by-line with mouseover translations</a> </li>
 </ol>
 </body>
 </html>
