--- a/Letter_to_Herodotus_Bailey_Bilingual (master).html
+++ b/Letter_to_Herodotus_Bailey_Bilingual (master).html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Epicurus's "Letter to Herodotus" - Cyril Bailey - Greek and English Text</title>
+<title>Epicurus's "Letter to Herodotus" - Cyril Bailey - Greek and English Text - Translator's Version</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Epicurus's "Letter to Herodotus" - Cyril Bailey - Greek and English text</h1>
+<h1>Epicurus's "Letter to Herodotus" - Cyril Bailey - Greek and English text - Translator's Version</h1>
 
 <h3>Source</h3>
 The Greek and English texts are both from from "Epicurus: The Extant Remains" (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up), and proofed by myself. 
@@ -962,7 +962,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        Καὶ μὴν καὶ ὅτι ἔχει ἡ ψυχὴ τῆς αἰσθήσεως τὴν πλείστην αἰτίαν, δεῖ κατέχειν·
+        καὶ μὴν καὶ ὅτι ἔχει ἡ ψυχὴ τῆς αἰσθήσεως τὴν πλείστην αἰτίαν, δεῖ κατέχειν·
     </td>
     <td> 
         Further, you must grasp that the soul possesses the chief cause of sensation:
@@ -1058,7 +1058,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        καθ᾽ ἑαυτὸ δὲ οὐκ ἔστι νοῆσαι τὸ ἀσώματον πλὴν τοῦ κενοῦ· 
+        καθ᾽ ἑαυτὸ δὲ οὐκ ἔστι νοῆσαι τὸ ἀσώματον πλὴν τοῦ κενοῦ·
     </td>
     <td>
         Now it is impossible to conceive the incorporeal as a separate existence, except the void:
