Started adding missing Bailey words

--- a/Letter_to_Herodotus_Bailey_Bilingual (master).html
+++ b/Letter_to_Herodotus_Bailey_Bilingual (master).html
@@ -66,7 +66,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ἐπεὶ καὶ τοῦ τετελεσιουργημένου τοῦτο κυριώτατον τοῦ παντὸς ἀκριβώματος γὶνεται, τὸ ταῖς ἐπιβολαῖς ὀξέως δύνασθαι χρῆσθαι, καὶ &lt;τοῦτο γίνοιτʹ ἂν ἁπάντων&gt; πρὸς ἁπλᾶ στοιχειώματα καὶ φωνὰς συναγομένων.
+        ἐπεὶ καὶ τοῦ τετελεσιουργημένου τοῦτο κυριώτατον τοῦ παντὸς ἀκριβώματος γὶνεται, τὸ ταῖς ἐπιβολαῖς ὀξέως δύνασθαι χρῆσθαι, καὶ &lt;τοῦτο γίνοιτ᾽ ἂν ἁπάντων&gt; πρὸς ἁπλᾶ στοιχειώματα καὶ φωνὰς συναγομένων.
     </td>
     <td>
         for even in the case of one fully initiated the most essential feature in all accurate knowledge is the capacity to make a rapid use of observation and mental apprehension, and &lt;this can be done if everything&gt; is summed up in elementary principles and formulae.
@@ -594,7 +594,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        αἱ δὲ ἄτομοι οὐδὲν μεταβάλλουσιν, ἐπειδήπερ δεῖ τι ὑπομένειν ἐν ταῖς διαλύσεσι τῶν συγκρίσεων στερεὸν καὶ ἀδιάλυτον, ὃ τὰς μεταβολὰς οὐκ εἰς τὸ μὴ ὃν ποιήσεται οὐδ᾽ ἐκ τοῦ μὴ ὄντος, ἀλλὰ κατὰ μεταθέσεις &lt;τινῶν&gt;, τινῶν δὲ καὶ προσόδους και ἀφόδους.
+        αἱ δὲ ἄτομοι οὐδὲν μεταβάλλουσιν, ἐπειδήπερ δεῖ τι ὑπομένειν ἐν ταῖς διαλύσεσι τῶν συγκρίσεων στερεὸν καὶ ἀδιάλυτον, ὃ τὰς μεταβολὰς οὐκ εἰς τὸ μὴ ὃν ποιήσεται οὐδ᾽ ἐκ τοῦ μὴ ὄντος, ἀλλὰ κατὰ μεταθέσεις &lt;τινῶν&gt;, τινῶν δὲ καὶ προσόδους καὶ ἀφόδους.
     </td>
     <td>
         but the atoms do not change at all, since there must needs be something which remains solid and indissoluble at the dissolution of compounds, which can cause changes; not changes into the non-existent or from the non-existent, but changes effected by the shifting of position of some particles, and by the addition or departure of others.
@@ -1042,7 +1042,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [66] οὐ γὰρ οἷόν τε νοεῖν αὐτὸ αἰσθανόμενον μὴ &gt;ὂν&lt; ἐν τούτῳ τῷ συστήματι καὶ ταῖς κινήσεσι ταύταις χρώμενον, ὅταν τὰ στεγάζοντα καὶ περιέχοντα μὴ τοιαῦτα ᾖ, ἐν οἷς νῦν οὖσα ἔχει ταύτας τὰς κινήσεις.
+        [66] οὐ γὰρ οἷόν τε νοεῖν αὐτὸ αἰσθανόμενον μὴ &lt;ὂν&gt; ἐν τούτῳ τῷ συστήματι καὶ ταῖς κινήσεσι ταύταις χρώμενον, ὅταν τὰ στεγάζοντα καὶ περιέχοντα μὴ τοιαῦτα ᾖ, ἐν οἷς νῦν οὖσα ἔχει ταύτας τὰς κινήσεις.
     </td>
     <td>
         [66] For it is impossible to imagine it with sensation, if it is not in this organism and cannot effect these movements, when what encloses and surrounds it is no longer the same as the surroundings in which it now exists and performs these movements.
@@ -1434,7 +1434,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [83] ὥστε ἂν γένοιτο οὖτος ὁ λὸγος δυνατὸς κατασχεθῆ&lt;ναι&gt; μετʹ ἀκριβείας·
+        [83] ὥστε ἂν γένοιτο οὖτος ὁ λόγος δυνατὸς κατασχεθῆ&lt;ναι&gt; μετ᾽ ἀκριβείας·
     </td>
     <td>
         [83] abridged so that my account would be easy to grasp with accuracy.
@@ -1466,7 +1466,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ὅσοι δὲ μὴ παντελῶς αὐτῶν τῶν ἀποτελουμένων, ἐκ τούτων εἰσὶν οἲ κατὰ τὸν ἄνευ φθόγγων τρόπον τὴν ἅμα νοήματι περίοδον τῶν κυριωτάτων πρὸς γαληνισμὸν ποιοῦνται.
+        ὅσοι δὲ μὴ παντελῶς αὐτῶν τῶν ἀποτελουμένων, ἐκ τούτων εἰσὶν οἳ κατὰ τὸν ἄνευ φθόγγων τρόπον τὴν ἅμα νοήματι περίοδον τῶν κυριωτάτων πρὸς γαληνισμὸν ποιοῦνται.
     </td>
     <td>
         And as for all who are not fully among those on the way to being perfected, some of them can from this summary obtain a hasty view of the most important matters without oral instruction so as to secure peace of mind.
