Added more words to dictionary

--- a/Letter_to_Herodotus_Bailey_Bilingual (master).html
+++ b/Letter_to_Herodotus_Bailey_Bilingual (master).html
@@ -546,7 +546,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        τὸ δὲ ῥεῦμα τοῦτο εἰς ὁμοιομερεῖς ὄγκους διασπείρεται, ἅμα τινὰ διασῴζοντας συμπάθειαν πρὸς ἀλλήλους καὶ ἑνότητα ἰδιότροπον διατείνουσαν πρὸς τὸ ἀποστεῖλαν, καὶ τὴν ἐπαίσθησιν τὴν ἐπ᾽ ἐκείνου ὡς τὰ πολλὰ ποιῦσαν, εἰ δὲ μή γε, τὸ ἔξωθεν μόνον ἔνδηλον παρασκευάζονσαν·
+        τὸ δὲ ῥεῦμα τοῦτο εἰς ὁμοιομερεῖς ὄγκους διασπείρεται, ἅμα τινὰ διασῴζοντας συμπάθειαν πρὸς ἀλλήλους καὶ ἑνότητα ἰδιότροπον διατείνουσαν πρὸς τὸ ἀποστεῖλαν, καὶ τὴν ἐπαίσθησιν τὴν ἐπ᾽ ἐκείνου ὡς τὰ πολλὰ ποιοῦσαν, εἰ δὲ μή γε, τὸ ἔξωθεν μόνον ἔνδηλον παρασκευάζουσαν·
     </td>
     <td>
         Now this current is split up into particles, each like the whole, which at the same time preserve a correspondence of qualities with one another and a unity of character which stretches right back to the object which emitted the sound: this unity it is which in most cases produces comprehension in the recipient, or, if not, merely makes manifest the presence of the external object.
