Began Letter to Pythocles

--- a/Letter_to_Herodotus_Bailey_Bilingual (master).html
+++ b/Letter_to_Herodotus_Bailey_Bilingual (master).html
@@ -466,7 +466,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        οὐ γὰρ ἂν ἐναποσφραγίσαιτο τὰ ἔξω τὴν ἑαυτῶν φύσιν τοῦ τε χρώματος καὶ τῆς μορφῆς διὰ τοῦ ἀέρος τοῦ μεταξὺ ἡμῶν τε κἀκείνων, οὐδὲ διὰ τὼν ἀκτίνων ἢ οἵων δή ποτε ῥευμάτων ἀφ᾽ ἡμῶν πρὸς ἐκεῖνα παραγινομένων, οὕτως ὡς τύπων τινῶν ἐπεισιόντων ἡμῖν ἀπὸ τῶν πραγμάτων όμοχρόων τε καὶ ὁμοιομόρφων κατὰ τὸ ἐναρμόττον μέγεθος εἰς τὴν ὄψιν ἢ τὴν διάνοιαν, ὠκέως ταῖς φοραῖς χρωμένων,
+        οὐ γὰρ ἂν ἐναποσφραγίσαιτο τὰ ἔξω τὴν ἑαυτῶν φύσιν τοῦ τε χρώματος καὶ τῆς μορφῆς διὰ τοῦ ἀέρος τοῦ μεταξὺ ἡμῶν τε κἀκείνων, οὐδὲ διὰ τῶν ἀκτίνων ἢ οἵων δή ποτε ῥευμάτων ἀφ᾽ ἡμῶν πρὸς ἐκεῖνα παραγινομένων, οὕτως ὡς τύπων τινῶν ἐπεισιόντων ἡμῖν ἀπὸ τῶν πραγμάτων όμοχρόων τε καὶ ὁμοιομόρφων κατὰ τὸ ἐναρμόττον μέγεθος εἰς τὴν ὄψιν ἢ τὴν διάνοιαν, ὠκέως ταῖς φοραῖς χρωμένων,
     </td>
     <td>
         For external objects could not make on us an impression of the nature of their own colour and shape by means of the air which lies between us and them, nor again by means of the rays or effluences of any sort which pass from us to them — nearly so well as if models, similar in colour and shape, leave the objects and enter according to their respective size either into our sight or into our mind, moving along swiftly,
@@ -1250,7 +1250,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ὄθεν καὶ τὰ ὀνόματα ἐξ ἀρχῆς μὴ θέσει γενέσθαι, ἀλλ᾽ αὐτὰς τὰς φύσεις τῶν ἀνθρώπων καθ᾽ ἕκαστα ἔθνη ἴδια πασχούσας πάθη καὶ ἴδια λαμβανούσας φαντάσματα ἰδίως τὸν ἀέρα ἐκπέμπειν στελλόμενον ὑφ᾽ ἑκάστων τῶν παθῶν καὶ τῶν φαντασμάτων, ὡς ἄν ποτε καὶ ἡ παρὰ τοὺς τόπους τῶν ἐθνῶν διαφορὰ εἴη· 
+        ὅθεν καὶ τὰ ὀνόματα ἐξ ἀρχῆς μὴ θέσει γενέσθαι, ἀλλ᾽ αὐτὰς τὰς φύσεις τῶν ἀνθρώπων καθ᾽ ἕκαστα ἔθνη ἴδια πασχούσας πάθη καὶ ἴδια λαμβανούσας φαντάσματα ἰδίως τὸν ἀέρα ἐκπέμπειν στελλόμενον ὑφ᾽ ἑκάστων τῶν παθῶν καὶ τῶν φαντασμάτων, ὡς ἄν ποτε καὶ ἡ παρὰ τοὺς τόπους τῶν ἐθνῶν διαφορὰ εἴη· 
     </td>
     <td>
         And so names too were not at first deliberately given to things, but men's natures according to their different nationalities had their own peculiar feelings and received their peculiar impressions, and so each in their own way emitted air formed into shape by each of these feelings and impressions, according to the differences made in the different nations by the places of their abode as well.
