--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -25,7 +25,8 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 ΕΠΙΚΟΥΡΟΣ ΠΥΘΟΚΛΕΙ ΧΑΙΡΕΙΝ
 <br>
-<p class="indent"> [84] Ἤνεγκέ μοι Κλέων ἐπιστολὴν παρὰ σοῦ, ἐν ᾗ φιλοφρονούμενός τε περὶ ἡμᾶς διετέλεις ἀξίως τῆς ἡμετέρας περὶ σεαυτὸν σπουδῆς καὶ οὐκ ἀπιθάνως ἐπειρῶ μνημονεύειν τῶν εἰς μακάριον βίον συντεινόντων διαλογισμῶν, ἐδέου τε σεαυτῷ περὶ τῶν μετεώρων σύντομον καὶ εὐπερίγραφον διαλογισμὸν ἀποστεῖλαι, ἵνα ῥᾳδίως μνημονεύῃς·
+<p class="indent">
+[84] Ἤνεγκέ μοι Κλέων ἐπιστολὴν παρὰ σοῦ, ἐν ᾗ φιλοφρονούμενός τε περὶ ἡμᾶς διετέλεις ἀξίως τῆς ἡμετέρας περὶ σεαυτὸν σπουδῆς καὶ οὐκ ἀπιθάνως ἐπειρῶ μνημονεύειν τῶν εἰς μακάριον βίον συντεινόντων διαλογισμῶν, ἐδέου τε σεαυτῷ περὶ τῶν μετεώρων σύντομον καὶ εὐπερίγραφον διαλογισμὸν ἀποστεῖλαι, ἵνα ῥᾳδίως μνημονεύῃς·
 
 τὰ γὰρ ἐν ἄλλοις ἡμῖν γεγραμμένα δυσμνημόνευτα εἶναι, καί τοι, ὡς ἔφης, συνεχῶς αὐτὰ βαστάζοντι. 
 
@@ -37,6 +38,18 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 καλῶς δὴ αὐτὰ διάλαβε, καὶ διὰ μνήμης ἔχων ὀξέως αὐτὰ περιόδευε μετὰ τῶν λοιπῶν ὧν ἐν τῇ μικρᾷ ἐπιτομῇ πρὸς Ἡρόδοτον ἀπεστείλαμεν.
 </p>
 <p class="indent">
+Πρῶτον μὲν οὖν μὴ ἄλλο τι τέλος ἐκ τῆς περὶ μετεώρων γνώσεως εἴ τε κατὰ συναφὴν λεγομένων εἴ τε αὐτοτελῶς νομίζειν εἶναι ἤ περ ἀταραξίαν καὶ πίστιν βέβαιον, καθά περ καὶ ἐπὶ τῶν λοιπῶν.
+
+[86] Μήτε τὸ ἀδύνατον καὶ παραβιάζεσθαι μήτε ὁμοίαν κατὰ πάντα τὴν θεωρίαν ἔχειν ἢ τοῖς περὶ βίων λόγοις ἢ τοῖς κατὰ τὴν τῶν ἄλλων φυσικῶν προβλημάτων κάθαρσιν, οἷον ὅτι τὸ πᾶν σώματα καὶ ἀναφὴς φύσις ἐστὶν ἢ ὅτι ἄτομα &lt;τὰ&gt; στοιχεῖα, καὶ πάντα τὰ τοιαῦτα ὅσα μοναχὴν ἔχει τοῖς φαινομένοις συμφωνίαν·
+
+ὅ περ ἐπὶ τῶν μετεώρων οὐχ ὑπάρχει, ἀλλὰ ταῦτά γε πλεοναχὴν ἔχει καὶ τῆς γενέσεως αἰτίαν καὶ τῆς οὐσίας ταῖς αἰσθήσεσι σύμφωνον κατηγορίαν.
+
+οὐ γὰρ κατὰ ἀξιώματα κενὰ καὶ νομοθεσίας φυσιολογητέον, ἀλλ᾽ ὡς τὰ φαινόμενα ἐκκαλεῖται·
+
+οὐ γὰρ ἤδη ἀλογίας καὶ κενῆς δόξης ὁ βίος ἡμῶν ἔχει χρείαν, ἀλλὰ τοῦ ἀθορύβως ἡμᾶς ζῆν.
+
+πάντα μὲν οὖν γίνεται ἀσείστως καὶ πάντων κατὰ πλεοναχὸν τρόπον ἐκκαθαιρομένων συμφώνως τοῖς φαινομένοις, ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
+
 
 </p>
 <br>
