--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -46,11 +46,28 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 οὐ γὰρ κατὰ ἀξιώματα κενὰ καὶ νομοθεσίας φυσιολογητέον, ἀλλ᾽ ὡς τὰ φαινόμενα ἐκκαλεῖται·
 
-οὐ γὰρ ἤδη ἀλογίας καὶ κενῆς δόξης ὁ βίος ἡμῶν ἔχει χρείαν, ἀλλὰ τοῦ ἀθορύβως ἡμᾶς ζῆν.
+[87] οὐ γὰρ ἤδη ἀλογίας καὶ κενῆς δόξης ὁ βίος ἡμῶν ἔχει χρείαν, ἀλλὰ τοῦ ἀθορύβως ἡμᾶς ζῆν.
 
 πάντα μὲν οὖν γίνεται ἀσείστως καὶ πάντων κατὰ πλεοναχὸν τρόπον ἐκκαθαιρομένων συμφώνως τοῖς φαινομένοις, ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
 
+ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
 
+ὅταν δέ τις τὸ μὲν ἀπολίπῃ, τὸ δὲ ἐκβάλῃ ὁμοίως σύμφωνον ὂν τῷ φαινομένῳ, δῆλον ὅτι καὶ ἐκ παντὸς ἐκπίπτει φυσιολογήματος, ἐπὶ δὲ τὸν μῦθον καταρρεῖ.
+
+σημεῖα δ᾽ ἐπὶ τῶν ἐν τοῖς μετεώροις συντελουμένων φέρειν τῶν παρ᾽ ἡμῖν τινα φαινομένων, ἃ θεωρεῖται ᾗ ὑπάρχει, καὶ οὐ τὰ ἐν τοῖς μετεώροις φαινόμενα ταῦτα γὰρ ἐνδέχεται πλεοναχῶς γενέσθαι.
+
+[88] τὸ μέντοι φάντασμα ἑκάστου τηρητέον καὶ ἔτι τὰ συναπτόμενα τούτῳ διαιρετέον, ἃ οὐκ ἀντιμαρτυρεῖται τοῖς παρ᾽ ἡμῖν γινομένοις πλεοναχῶς συντελεῖσθαι.
+</p>
+<p class="indent">
+Κόσμος ἐστὶ περιοχή τις οὐρανοῦ, ἄστρα τε καὶ γῆν καὶ πάντα τὰ φαινόμενα περιέχουσα, ἀποτομὴν ἔχουσα ἀπὸ τοῦ ἀπείρου καὶ λήγουσα ἢ ἐν περιαγομένῳ ἢ ἐν στάσιν ἔχοντι καὶ στρογγύλην ἢ τρίγωνον ἢ οἵαν δή ποτε περιγραφήν.
+
+πανταχῶς γὰρ ἐνδέχεται·
+
+τῶν γὰρ φαινομένων οὐδὲν ἀντιμαρτυρεῖ &lt;έν&gt; τῷδε τῷ κόσμῳ, ἐν ᾧ λῆγον οὐκ ἔστι καταλαβεῖν.
+
+[89] Ὄτι δὲ καὶ τοιοῦτοι κόσμοι εἰσὶν ἄπειροι τὸ πλῆθος, ἔστι καταλαβεῖν, καὶ ὅτι καὶ ὁ τοιοῦτος δύναται κόσμος γίνεσθαι καὶ ἐν κόσμῳ καὶ μετακοσμίῳ, ὃ λέγομεν μεταξὺ κόσμων διάστημα, ἐν πολυκένῳ τόπῳ καὶ οὐκ ἐν μεγάλῳ εἰλικρινεῖ καὶ κενῷ, καθά περ τινὲς φασίν, ἐπιτηδείων τινῶν σπερμάτων ῥυέντων ἀφ᾽ ἑνὸς κόσμου ἢ μετακοσμίου ἢ καὶ ἀπὸ πλειόνων κατὰ μικρὸν προσθέσεις τε καὶ διαρθρώσεις καὶ μεταστάσεις ποιούντων ἐπ᾽ ἄλλον τόπον, ἐὰν οὕτω τύχῃ, καὶ ἐπαρδεύσεις ἐκ τῶν ἐχόντων ἐπιτηδείως ἕως τελειώσεως καὶ διαμονὴν ἐφ᾽ ὅσον τὰ ὑποβληθέντα θεμέλια τὴν προσδοχὴν δύναται ποιεῖσθαι.
+
+[90]
 </p>
 <br>
 <br>
