--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -84,7 +84,26 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 καὶ πᾶν δὲ τὸ ἑἰς τοῦτο τὸ μέρος ἔνστημα ῥᾳδίως διαλυθήσεται, ἐάν τις τοῖς ἐναργήμασι προσέχῃ, ὅ περ ἐν τοῖς περὶ φύσεως βυβλίοις δείκνυμεν.
 
-[92]
+[92] Ἁνατολὰς καὶ δύσεις ἡλίου καὶ σελήνης καὶ τῶν λοιπῶν ἄστρων καὶ κατὰ ἄναψίν &lt;τε&gt; γενέσθαι δυνατὸν καὶ σβέσιν, τοιαύτης οὔσης περιστάσεως ὥστε τὰ προειρημένα ἀποτελεῖσθαι οὐδὲν γὰρ τῶν φαινομένων ἀντιμαρτυρεῖ.
+
+καὶ κατ᾽ ἐκφάνειάν τε ὑπὲρ γῆς καὶ πάλιν ἐπιπροσθέτησιν τὸ προεἰρημένον δύναιτ᾽ ἂν συντελεῖσθαι·
+
+οὐδὲ γάρ τι τῶν φαινομένων ἀντιμαρτυρεῖ.
+
+Τάς τε κινήσεις αὐτῶν οὐκ ἀδύνατον μὲν γίνεσθαι κατὰ τὴν τοῦ ὅλου οὐρανοῦ δίνην, ἢ τούτου μὲν στάσιν, αὐτῶν δὲ δίνην κατὰ τὴν ἐξ ἀρχῆς ἐν τῇ γενέσει τοῦ κόσμου ἀνάγκην ἀπογεννηθεῖσαν ἐπ᾽ ἀνατολῇ·
+
+[93]  * * * &lt;σφοδρο&gt;τάτῃ θερμασιᾳ κατά τινα ἐπινέμησιν τοῦ πυρὸς ἀεὶ ἐπὶ τοὺς ἑξῆς τόπους ἰόντος.
+
+Τροπὰς ἡλίου καὶ σελήνης ἐνδέχεται μὲν γίνεσθαι κατὰ λόξωσιν οὐρανοῦ οὕτω τοῖς χρόνοις κατηναγκασμένου·
+
+ὁμοίως δὲ καὶ κατὰ ἀέρος ἀντέξωσιν ἢ καὶ ὕλης ἀεὶ ἐπιτηδείας ἐχομένως ἐμπιπραμένης, τῆς δ᾽ ἐκλειπούσης·
+
+ἢ καὶ ἐξ ἀρχῆς τοιαύτην δίνην κατειληθῆναι τοῖς ἄστροις τούτοις, ὥσθ᾽ οἷόν τιν᾽ ἕλικα κινεῖσθαι.
+
+πᾶντα γὰρ τὰ τοιαῦτα καὶ τὰ τούτοις συγγενῆ οὐθενὶ τῶν ἐναργημάτων διαφωνεῖ, ἐάν τις ἀεὶ ἐπὶ τῶν τοιούτων μερῶν ἐχόμενος τοῦ δυνατοῦ εἰς τὸ σύμφωνον τοῖς φαινομένοις ἕκαστον τούτων δύνηται ἐπάγειν, μὴ φοβούμενος τὰς ἀνδραποδώδεις ἀστρολόγων τεχνιτείας.
+</p>
+<p class="indent">
+[94]
 </p>
 <br>
 <br>
