--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -103,7 +103,26 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 πᾶντα γὰρ τὰ τοιαῦτα καὶ τὰ τούτοις συγγενῆ οὐθενὶ τῶν ἐναργημάτων διαφωνεῖ, ἐάν τις ἀεὶ ἐπὶ τῶν τοιούτων μερῶν ἐχόμενος τοῦ δυνατοῦ εἰς τὸ σύμφωνον τοῖς φαινομένοις ἕκαστον τούτων δύνηται ἐπάγειν, μὴ φοβούμενος τὰς ἀνδραποδώδεις ἀστρολόγων τεχνιτείας.
 </p>
 <p class="indent">
-[94]
+[94] Κένωσίς τε σελήνης καὶ πάλιν πλήρωσις καὶ κατὰ στροφὴν τοῦ σώματος τούτου δύναιτ᾽ ἂν γίνεσθαι καὶ κατὰ σχηματισμοὺς ἀέρος ὁμοίως, ἔτι τε καὶ κατ᾽ ἐπιπροσθετήσεις καὶ κατὰ πάντας τρόπους, καθ᾽ οὓς καὶ τὰ παρ᾽ ἡμῖν φαινόμενα ἐκκαλεῖται εἰς τὰς τούτου τοῦ εἴδους ἀποδόσεις, ἐὰν μή τις τὸν μοναχῇ τρόπον κατηγαπηκὼς τοὺς ἄλλους κενῶς ἀποδοκιμάζῃ, οὐ τεθεωρηκὼς τί δυνατὸν ἀνθρώπῳ θεωρῆσαι καὶ τί ἀδύνατον, καὶ διὰ τοῦτο ἀδύνατα θεωρεῖν ἐπιθυμῶν.
+
+Ἔτι τε ἐνδέχεται τὴν σελήvnv ἐξ ἑαυτῆς ἔχειν τὸ φῶς, ἐνδέχεται δὲ ἀπὸ τοῦ ἡλίου.
+
+[95] καὶ γὰρ παρ᾽ ἡμῖν θεωρεῖται πολλὰ μὲν ἐξ ἑαυτῶν ἔχοντα, πολλὰ δὲ ἀφ᾽ ἑτέρων.
+
+καὶ οὐθὲν ἐμποδοστατεῖ τῶν ἐν τοῖς μετεώροις φαινομένων, ἐάν τις τοῦ πλεοναχοῦ τρόπου ἀεὶ μνήμην ἔχῃ καὶ τὰς ἀκολούθους αὐτοῖς ὑποθέσεις ἅμα καὶ αἰτίας συνθεωρῇ καὶ μὴ ἀναβλέπων εἰς τὰ ἀνακόλουθα ταῦτ᾽ ὀγκοῖ ματαίως καὶ καταρρέπῃ ἄλλοτε ἄλλως ἐπὶ τὸν μοναχὸν τρόπον.
+
+Ἡ δὲ ἔμφασις τοῦ προσώπου ἐν αὐτῇ δύναται μὲν γίνεσθαι καὶ κατὰ παραλλαγὴν μερῶν καὶ κατ᾽ ἐπιπροσθέτησιν, καὶ ὅσοι ποτ᾽ ἂν τρόποι θεωροῖντο τὸ σύμφωνον τοῖς φαινομένοις κεκτημένοι.
+
+[96] ἐπὶ πάντων γὰρ τῶν μετεώρων τὴν τοιαύτην ἰχνευσιν οὐ προετέον.
+
+ἢν γάρ τις ᾖ μαχόμενος τοῖς ἐναργήμασιν, οὐδέποτε μὴ δυνήσεται ἀταραξίας γνησίου μεταλαβεῖν.
+</p>
+<p class="indent">
+Ἔκλειψις ἡλίου καὶ σελήνης δύναται μὲν γίνεσθαι καὶ κατὰ σβέσιν, καθά περ καὶ παρ᾽ ἡμῖν τοῦτο θεωρεῖται γινόμενον·
+
+καὶ ἤδη κατ᾽ ἐπιπροσθέτησιν ἄλλων τινῶν, ἢ γῆς ἢ οὐρανοῦ ἤ τινος ἑτέρου τοιούτου.
+
+καὶ ὧδε τοὺς οἰκείους ἀλλήλοις τρόπους συνθεωρητέον, καὶ τὰς ἅμα συγκυρήσεις τινῶν ὅτι οὐκ ἀδύνατον γίνεσθαι.
 </p>
 <br>
 <br>
