--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -92,7 +92,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 Τάς τε κινήσεις αὐτῶν οὐκ ἀδύνατον μὲν γίνεσθαι κατὰ τὴν τοῦ ὅλου οὐρανοῦ δίνην, ἢ τούτου μὲν στάσιν, αὐτῶν δὲ δίνην κατὰ τὴν ἐξ ἀρχῆς ἐν τῇ γενέσει τοῦ κόσμου ἀνάγκην ἀπογεννηθεῖσαν ἐπ᾽ ἀνατολῇ·
 
-[93]  * * * &lt;σφοδρο&gt;τάτῃ θερμασιᾳ κατά τινα ἐπινέμησιν τοῦ πυρὸς ἀεὶ ἐπὶ τοὺς ἑξῆς τόπους ἰόντος.
+[93] * * * &lt;σφοδρο&gt;τάτῃ θερμασιᾳ κατά τινα ἐπινέμησιν τοῦ πυρὸς ἀεὶ ἐπὶ τοὺς ἑξῆς τόπους ἰόντος.
 
 Τροπὰς ἡλίου καὶ σελήνης ἐνδέχεται μὲν γίνεσθαι κατὰ λόξωσιν οὐρανοῦ οὕτω τοῖς χρόνοις κατηναγκασμένου·
 
@@ -123,6 +123,134 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 καὶ ἤδη κατ᾽ ἐπιπροσθέτησιν ἄλλων τινῶν, ἢ γῆς ἢ οὐρανοῦ ἤ τινος ἑτέρου τοιούτου.
 
 καὶ ὧδε τοὺς οἰκείους ἀλλήλοις τρόπους συνθεωρητέον, καὶ τὰς ἅμα συγκυρήσεις τινῶν ὅτι οὐκ ἀδύνατον γίνεσθαι.
+
+[97] Ἔτι τε τάξις περιόδου, καθά περ ἔνια καὶ παρ᾽ ἡμῖν τῶν τυχόντῶν γίνεται, λαμβανέσθω·
+
+καὶ ἡ θεία φύσις πρὸς ταῦτα μηδαμῇ προσαγέσθω, ἀλλ᾽ ἀλειτούργητος διατηρείσθω καὶ ἐν τῇ πάσῃ μακαριότητι.
+
+ὡς εἰ τοῦτο μὴ πραχθήσεται, ἅπασα ἡ τῶν μετεώρων αἰτιολογία ματαία ἔσται, καθά περ τισὶν ἤδη ἐγένετο οὐ δυνατοῦ τρόπου ἐφαψαμένοις, εἰς δὲ τὸ μάταιον ἐκπεσοῦσι τῷ καθ᾽ ἕνα τρόπον μόνον οἴεσθαι γίνεσθαι, τοὺς δ᾽ ἄλλους πάντας τοὺς κατὰ τὸ ἐνδεχόμενον ἐκβάλλειν εἴς τε τὸ ἀδιανόητον φερομένους καὶ τὰ φαινόμενα, ἃ δεῖ σημεῖα ἀποδέχεσθαι, μὴ δυναμένους συνθεωρεῖν.
+</p>
+<p class="indent">
+[98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς κα * * * ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων.
+
+οἱ δὲ τὸ ἕν λαμβάνοντες τοῖς τε φαινομένοις μάχονται καὶ τοῦ ᾗ δυνατὸν ἀνθρώπῳ θεωρῆσαι διαπεπτώκασιν.
+</p>
+<p class="indent">
+Ἐπισημασίαι δύνανται γίνεσθαι καὶ κατὰ συγκυρήσεις καιρῶν, καθά περ ἐν τοῖς ἐμφανέσι παρ᾽ ἡμῖν ζῴοις, καὶ παρ᾽ ἑτεροιώσεις ἀέρος καὶ μεταβολάς.
+
+ἀμφότερα γὰρ ταῦτὰ οὐ μάχεται τοῖς φαινομένοις·
+
+[99] ἐπὶ δὲ ποίοις παρὰ τοῦτο ἢ τοῦτο τὸ αἴτιον γίνεται, οὐκ ἔστι συνιδεῖν.
+</p>
+<p class="indent">
+Νέφη δύναται γίνεσθαι καὶ συνίστασθαι καὶ παρὰ πιλήσεις ἀέρος καὶ παρὰ περιπλοκὰς ἀλληλούχων ἀτόμων καὶ ἐπιτηδείων εἰς τὸ τοῦτο τελέσαι καὶ κατὰ ῥευμάτων συλλογὴν ἀπό τε γῆς καὶ ὑδάτων·
+
+καὶ κατ᾽ ἄλλους δὲ τρόπους πλείους αἱ τῶν τοιούτων συστάσεις οὐκ ἀδυνατοῦσι συντελεῖσθαι.
+
+Ἤδη δ᾽ ἀπ᾽ αὐτῶν ᾗ μὲν θλιβομένων, ᾗ δὲ μεταβαλλόντων ὕδατα δύναται συντελεῖσθαι, 
+
+[100] ἔτι τε πνευμάτων καταφορᾷ ἀπὸ ἐπιτηδείων τόπων δι᾽ ἀέρος κινουμένων, βιαιοτέρας ἐπαρδεύσεως γινομένης ἀπό τινων ἀθροισμάτων ἐπιτηδείων εἰς τὰς τοιαύτας ἐπιπέμψεις.
+</p>
+<p class="indent">
+Βροντὰς ἐνδέχεται γίνεσθαι καὶ κατὰ πνεύματος ἐν τοῖς κοιλώμασι τῶν νεφῶν ἀνείλησιν, καθά περ ἐν τοῖς ἡμετέροις ἀγγείοις, καὶ παρὰ πυρὸς πεπνευματωμένου βόμβον ἐν αὐτοῖς, καὶ κατὰ ῥήξεις δὲ νεφῶν καὶ διασπάσεις, καὶ κατὰ παρατρίψεις νεφῶν καὶ τάσεις πῆξιν εἰληφότων κρυσταλλοειδῆ·
+
+καὶ τὸ ὅλον καὶ τοῦτο τὸ μέρος πλεοναχῶς γίνεσθαι λέγειν ἐκκαλεῖται τὰ φαινόμενα.
+
+[101] Καὶ ἀστραπαὶ δ᾽ ὡσαύτως γίνονται κατὰ πλείους τρόπους·
+
+καὶ γὰρ κατὰ παράτριψιν καὶ σύγκρουσιν νεφῶν ὁ πυρὸς ἀποτελεστικὸς σχηματισμὸς ἐξολισθαίνων ἀστραπὴν γεννᾷ·
+
+καὶ κατ᾽ ἐκριπισμὸν ἐκ τῶν νεφῶν ὑπὸ πνευμάτων τῶν τοιούτων σωμάτων ἃ τὴν λαμπηδόνα ταύτην παρασκευάζει, καὶ κατ᾽ ἐκπιασμόν, θλίψεως τῶν νεφῶν γινομένης εἴ θ᾽ ὑπ᾽ ἀλλήλων εἴ θ᾽ ὑπὸ πνευμάτων·
+
+καὶ κατ᾽ ἐμπερίληψιν δὲ τοῦ ἀπὸ τῶν ἄστρων κατεσπειραμένου φωτός, εἶτα συνελαυνομένου ὑπὸ τῆς κινήσεως νεφῶν τε καὶ 
+πνευμάτων καὶ διεκπίπτοντος διὰ τῶν νεφῶν·
+
+ἢ κατὰ διήθησιν &lt;διὰ&gt; τῶν νεφῶν τοῦ λεπτομερεστάτου φωτὸς καὶ τὴν τούτου κίνησιν·
+
+καὶ κατὰ τὴν τοῦ πνεύματος ἐκπύρωσιν τὴν γινομένην διά τε συντονίαν φορᾶς καὶ διὰ σφοδρὰν κατείλησιν·
+
+[102] καὶ κατὰ ῥήξεις δὲ νεφῶν ὑπὸ πνευμάτων ἔκπτωσίν τε πυρὸς ἀποτελεστικῶν ἀτόμων καὶ τὸ τῆς ἀστραπῆς φάντασμα ἀποτελουσῶν·
+
+καὶ κατ᾽ ἄλλους δὲ πλείους τρόπους ῥᾳδίως ἔσται καθορᾶν ἐχόμενον ἀεὶ τῶν φαινομένων καὶ τὸ τούτοις ὅμοιον δυνάμενον συνθεωρεῖν.
+
+Προτερεῖ δὲ ἀστραπὴ βροντῆς ἐν τοιᾷδέ τινι περιστάσει νεφῶν καὶ διὰ τὸ ἅμα τῷ τὸ πνεῦμα ἐμπίπτειν ἐξωθεῖσθαι τὸν ἀστραπῆς ἀποτελεστικὸν σχηματισμόν, ὕστερον δὲ τὸ πνεῦμα ἀνειλούμενον τὸν βόμβον ἀποτελεῖν τοῦτον·
+
+καὶ κατ᾽ ἔμπτωσιν δὲ ἀμφοτέρων ἅμα, τῷ τάχει συντονωτέρῳ κεχρῆσθαι πρὸς ἡμᾶς τὴν ἀστραπήν, ὑστερεῖν δὲ τὴν βροντήν,
+
+[103] καθά περ ἐπ᾽ ἐνίων ἐξ ἀποστήματος θεωρουμένων καὶ πληγάς τινας ποιουμένων.
+
+Κεραυνοὺς ἐνδέχεται γίνεσθαι καὶ κατὰ πλείονας πνευμάτων συλλογὰς καὶ κατείλησιν ἰσχυράν τε ἐκπύρωσιν·
+
+καὶ κατὰ ῥῆξιν μέρους καὶ ἔκπτωσιν ἰσχυροτέραν αὐτοῦ ἐπὶ τοὺς κάτω τόπους, τῆς ῥήξεως γινομένης διὰ τὸ τοὺς ἑξῆς τόπους πυκνοτέρους εἶναι διὰ πίλησιν νεφῶν·
+
+καὶ κατ᾽ αὐτὴν δὲ τὴν τοῦ πυρὸς ἔκπτωσιν ἀνειλουμένου, καθὰ καὶ βροντὴν ἐνδέχεται γίνεσθαι, πλείονος γενομένου καὶ πνευματωθέντος ἰσχυρότερον καὶ ῥήξαντος τὸ νέφος διὰ τὸ μὴ δύνασθαι ὑποχωρεῖν εἰς τὰ ἑξῆς, τῷ πίλησιν γίνεσθαι ἀεὶ πρὸς ἄλληλα.
+
+[104] καὶ κατ᾽ ἄλλους δὲ τρόπους πλείονας ἐνδέχεται κεραυνοὺς ἀποτελεῖσθαι·
+
+μόνον ὁ μῦθος ἀπέστω·
+
+ἀπέσται δέ, ἐάν τις καλῶς τοῖς φαινομένοις ἀκολουθῶν περὶ τῶν ἀφανῶν σημειῶται.
+</p>
+<p class="indent">
+Πρηστῆρας ἐνδέχεται γίνεσθαι καὶ κατὰ κάθεσιν νέφους εἰς τοὺς κάτω τόπους στυλοειδῶς ὑπὸ πνεύματος ἀθρόου ὠσθέντος καὶ διὰ τοῦ πνεύματος κύκλω φερομένου, ἅμα καὶ τὸ νέφος εἰς τὸ πλάγιον ὠθοῦντος τοῦ ἐκτὸς πνεύματος·
+
+καὶ κατὰ περίστασιν δὲ πνεύματος εἰς κύκλον, ἀέρος τινὸς ἐπισυνωθουμένου ἄνωθεν·
+
+καὶ ῥύσεως πολλῆς πνευμάτων γενομένης καὶ οὐ δυναμένης εἰς τὰ πλάγια διαρρυῆναι διὰ τὴν πέριξ τοῦ ἀέρος πίλησιν.
+
+[105] καὶ ἕως μὲν γῆς τοῦ πρηστῆρος καθιεμένου στρόβιλοι γίγνονται·
+
+ἕως δὲ θαλάττης δῖνοι ἀποτελοῦνται.
+</p>
+<p class="indent">
+Σεισμοὺς ἐνδέχεται γίνεσθαι καὶ κατὰ πνεύματος ἐν τῇ γῇ ἀπόληψιν καὶ παρὰ μικροὺς ὄγκους αὐτῆς παράθεσιν καὶ συνεχῆ κίνησιν, ὃ τὴν κράδανσιν τῇ γῇ παρασκευάζει.
+
+καὶ τὸ πνεῦμα τοῦτο ἢ ἔξωθεν ἐμπεριλαμβάνει &lt;ἢ&gt; ἐκ τοῦ πίπτειν &dagger; εἰς ἐδάφη εἰς ἀντροειδεῖς τόπους τῆς γῆς ἐκπνευματοῦντα τὸν ἐπειλημμένον ἀέρα.
+
+&lt;καὶ&gt; κατ᾽ αὐτὴν δὲ τὴν διάδοσιν τῆς κινήσεως ἐκ τῶν πτώσεων ἐδαφῶν πολλῶν καὶ πάλιν ἀνταπόδοσιν, ὅταν πυκνώμασι σφοδροτέροις τῆς γῆς ἀπαντήσῃ, ἐνδέχεται σεισμοὺς ἀποτελεῖσθαι.
+
+[106] καὶ κατ᾽ ἄλλους δὲ πλείους τρόπους τὰς κινήσεις ταύτας τῆς γῆς γίνεσθαι.
+</p>
+<p class="indent">
+Τὰ δὲ πνεύματα συμβαίνει γίνεσθαι κατὰ χρόνον ἀλλοφυλίας τινὸς ἀεὶ καὶ κατὰ μικρὸν παρεισδυομένης, καὶ καθ᾽ ὕδατος ἀφθόνου συλλογήν.
+
+τὰ δὲ λοιπὰ πνεύματα γίνεται καὶ ὀλίγων πεσόντων εἰς τὰ πολλὰ κοιλώματα, διαδόσεως τούτων γινομένης.
+</p>
+<p class="indent">
+Χάλαζα συντελεῖται καὶ κατὰ πῆξιν ἰσχυροτέραν, πάντοθεν δὲ πνευματωδῶν περίστασιν τινῶν κᾆτα μέρισιν καὶ &lt;κατὰ&gt; πῆξιν μετριωτέραν ὑδατοειδῶν τινων, &lt;πνευματωδὼν δέ τινων&gt; ὁμούρησιν ἅμα τήν τε σύνωσιν αὐτῶν ποιουμένην καὶ τὴν διάρρηξιν πρὸς τὸ κατὰ μέρη συνίστασθαι πηγνύμενα καὶ κατὰ ἀθροότητα.
+
+[107] ἡ δὲ περιφέρεια οὐκ ἀδυνάτως μὲν ἔχει γίνεσθαι πάντοθεν τῶν ἄκρων ἀποτηκομένων καὶ ἐν τῇ συστάσει πάντοθεν, ὡς λέγεται, κατὰ μέρη ὁμαλῶς περιισταμένων εἴ τε ὑδατοποιῶν τινων εἴ τε πνευματωδῶν.
+</p>
+<p class="indent">
+Χιόνα δὲ ἐνδέχεται συντελεῖσθαι καὶ ὕδατος λεπτοῦ ἐκχεομένου ἐκ τῶν νεφῶν διὰ πόρων συμμετρίας καὶ θλίψεις ἐπιτηδείων νεφῶν ὑπὸ πνευμάτων σφοδράς, εἶτα τούτου πῆξιν ἐν τῇ φορᾷ λαμβάνοντος διά τινα ἰσχυρὰν ἐν τοῖς κατωτέρῳ τόποις τῶν νεφῶν ψυχρασίας περίστασιν.
+
+καὶ κατὰ πῆξιν δ᾽ ἐν τοῖς νέφεσιν ὁμαλῆ ἀραιότητα ἔχουσιν τοιαύτη πρόεσις ἐκ τῶν νεφῶν γίνοιτο ἂν πρὸς ἄλληλα θλιβομένων &lt;τῶν&gt; ὑδατοειδῶν καὶ συμπαρακειμένων·
+
+ἃ οἱονεὶ σύνωσιν ποιούμενα χάλαζαν ἀποτελεῖ, ὃ μάλιστα γίνεται ἐν τῷ ἔαρι.
+
+[108] καὶ κατὰ τρῖψιν δὲ νεφῶν πῆξιν εἰληφότων ἀπόπαλσιν ἂν λαμβάνοι τὸ τῆς χιόνος τοῦτο ἄθροισμα.
+
+καὶ κατ᾽ ἄλλους δὲ τρόπους ἐνδέχεται χιόνα συντελεῖσθαι.
+</p>
+<p class="indent">
+Δρόσος συντελεῖται καὶ κατὰ σύνοδον πρὸς ἄλληλα ἐκ τοῦ ἀέρος τῶν τοιούτων, ἃ τῆς τοιαύτης ὑγρασίας ἀποτελεστικὰ γίνεται·
+
+καὶ κατὰ φορὰν δὲ ἢ ἀπὸ νοτερῶν τόπων ἢ ὕδατα κεκτημένων, ἐν οἵοις τόποις μάλιστα δρόσος συντελεῖται, εἶτα σύνοδον τούτων εἰς τὸ αὐτὸ λαβόντων καὶ ἀποτέλεσιν ὑγρασίας καὶ πάλιν φορὰν ἐπὶ τοὺς κάτω τόπους, καθά περ ὁμοίως καὶ παρ᾽ ἡμῖν ἐπὶ πλεόνων τοιαῦτά τινα &lt;συντελούμενα θεωρεῖται.
+
+[109] Καὶ πάχνη δὲ οὐ διαφερόντως&gt; συντελεῖται τῶν δρόσων, τοιούτων τινῶν πῆξίν τινα ποιὰν λαβόντων διὰ περίστασίν τινα ἀέρος ψυχροῦ.
+</p>
+<p class="indent">
+Κρύσταλλος συντελεῖται καὶ κατ᾽ ἔκθλιψιν μὲν τοῦ περιφεροῦς σχηματισμοῦ ἐκ τοῦ ὕδατος, σύνωσιν δὲ τῶν σκαληνῶν καὶ ὀξυγωνίων τῶν ἐν τῷ ὕδατι ὑπαρχόντων·
+
+καὶ κατὰ ἔξωθεν δὲ τῶν τοιούτων πρόσκρισιν, ἃ συνελαθέντα πῆξιν τῷ ὕδατι παρεσκεύασε, ποσὰ τῶν περιφερῶν ἐκθλίψαντα.
+
+Ἶρις γίνεται κατὰ πρόσλαμψιν τοῦ ἡλίου πρὸς ἀέρα ὑδατοειδῆ·
+
+ἢ κατὰ κρᾶσιν ἰδίαν τοῦ τε φωτὸς καὶ τοῦ ἀέρος, ἣ τὰ τῶν χρωμάτων τούτων ἰδιώματα ποιήσει εἴ τε πάντα εἴ τε μονοειδῶς·
+
+ἀφ᾽ οὗ πάλιν ἀπολάμποντος τὰ ὁμοροῦντα τοῦ ἀέρος χρῶσιν τοιαύτην λήψεται, οἵαν θεωροῦμεν, κατὰ πρόσλαμψιν πρὸς τὰ μέρη.
+
+[110]
 </p>
 <br>
 <br>
